fixed the overflow on resources page

--- a/resources_style.css
+++ b/resources_style.css
@@ -11,7 +11,7 @@ html{
     font-size: 10px;
 }
 
-body{
+header{
     overflow-x: hidden;
 }
 
